macro(add_sieveutil_test _source)
  set( _test ${_source})
  get_filename_component( _name ${_source} NAME_WE )
  add_executable( ${_name} ${_test} )
  add_test( ${_name} ${_name} )
  ecm_mark_as_test(sievescriptdebugger-${_name})
  target_link_libraries( ${_name}  KF5::KSieveUi Qt5::Test KF5::MailTransport KF5::I18n)
endmacro()

add_sieveutil_test(sieveaccounttest.cpp)
add_sieveutil_test(utilmethodtest.cpp)
